test/e2e/app-dir/app-prefetch/app/invalid-url/error.js
'use client'
export default function Error() {
  return <h1>A prefetch threw an error</h1>
}
